[tool.poetry]
name = "enspdb"
version = "0.5.3"
description = "Ensemble preparation package for eBDIMS (interacts with UniProt to retrive ensemble information, extracts CA chains, ...)"
authors = ["Ozge Yoluk <ozgeyoluk@proteinart.net>"]
license = "GNU GENERAL PUBLIC LICENSE"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.4"
biopython = "^1.79"
argparse = "^1.4.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
